--- a/index.html
+++ b/index.html
@@ -7,4 +7,7 @@
 
 <body></body>
 </html>
-<script></script>
+<script>
+    const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+
+</script>
