--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Js methods </title>
+    <title>typeahead </title>
 </head>
 
 <body></body>
@@ -10,4 +10,8 @@
 <script>
     const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
 
+    const cities = [];
+    fetch(endpoint)
+        .then(blob=>blob.json())
+        .then(data=>console.log(data))
 </script>
