#fetch match cities or staate

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     function findMatches(wordToMach, cites) {
         return cites.filter(place => {
             const regex = new RegExp(wordToMach, 'gi');
-            return place.city.match(regex);
+            return place.city.match(regex) || place.state.match(regex);
         })
 
     }
