--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
     }
     const searchInput = document.querySelector('.search');
     const suggestions = document.querySelector('.suggestions');
-    searchInput.addEventListener('change',displayMatches)
+    searchInput.addEventListener('change',displayMatches);
+    searchInput.addEventListener('keyup',displayMatches);
 </script>
