--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
     }
     function  displayMatches() {
        const matchArray = findMatches(this.value, cities);
-       console.log(matchArray);
+      const html =matchArray.map(place=>{
+          return`<li>
+           <span class="name"> ${place.city},${place.state}</span>
+
+</li>`
+      });
+      suggestions.innerHTML=html;
     }
     const searchInput = document.querySelector('.search');
     const suggestions = document.querySelector('.suggestions');
