--- a/index.html
+++ b/index.html
@@ -32,18 +32,20 @@
         })
 
     }
-    function  displayMatches() {
-       const matchArray = findMatches(this.value, cities);
-      const html =matchArray.map(place=>{
-          return`<li>
+
+    function displayMatches() {
+        const matchArray = findMatches(this.value, cities);
+        const html = matchArray.map(place => {
+            return `<li>
            <span class="name"> ${place.city},${place.state}</span>
 
 </li>`
-      });
-      suggestions.innerHTML=html;
+        }).join('');
+        suggestions.innerHTML = html;
     }
+
     const searchInput = document.querySelector('.search');
     const suggestions = document.querySelector('.suggestions');
-    searchInput.addEventListener('change',displayMatches);
-    searchInput.addEventListener('keyup',displayMatches);
+    searchInput.addEventListener('change', displayMatches);
+    searchInput.addEventListener('keyup', displayMatches);
 </script>
