--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     const cities = [];
     fetch(endpoint)
         .then(blob => blob.json())
-        .then(data => cities.push(...data))
+        .then(data => cities.push(...data));
 
     function findMatches(wordToMach, cites) {
         return cites.filter(place => {
@@ -38,7 +38,7 @@
         const html = matchArray.map(place => {
             return `<li>
            <span class="name"> ${place.city},${place.state}</span>
-
+           <span class="population">${place.population}</span>
 </li>`
         }).join('');
         suggestions.innerHTML = html;
