--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         })
 
     }
-
+    function numberWithCommas(x) {
+        return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+    }
     function displayMatches() {
         const matchArray = findMatches(this.value, cities);
         const html = matchArray.map(place => {
@@ -41,7 +43,7 @@
             const stateName= place.state.replace(regex,`<span class="hl">${this.value}</span>`)
             return `<li>
            <span class="name"> ${cityName},${stateName}</span>
-           <span class="population">${place.population}</span>
+           <span class="population">${numberWithCommas(place.population)}</span>
 </li>`
         }).join('');
         suggestions.innerHTML = html;
